Trying to make game over buttons fix inside chocolate bar on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -202,8 +202,8 @@ i.fa-skull-crossbones {
 }
 
 button {
-	width: calc(min(160px, 30vmin) - 15px);
-	height: 70px;
+	width: calc(2 * min(80px, 15vmin) - 15px);
+	height: calc(min(80px, 15vmin) - 8px);
 	/* margin-top: 10px;
 	margin-right: 20px; */
 	font-size: 1.25rem;
